--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 *{padding: 0; margin: 0;}
 body{
     font-family: 'Poppins', sans-serif;
 }
-.fix{
-  overflow:hidden;
+section{
+height: 300px;
+padding-bottom:80px;
 }
 
  h1{
@@ -12,16 +14,23 @@ body{
     font-variant: small-caps;
     margin-top: 20px;
 }
+h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+}
 h3{
     font-size:20px;
     font-weight: 200;
     margin-top: 20px;
     font-family: 'Pirata One', cursive;
     
-    margin: 5px;
 }
 .name_heighlite{
     color: orange;
+}
+.sub{
+    font-size: 40px;
+    font-family: 'Dancing Script', cursive; 
 }
 p{
     text-align: justify;
@@ -30,10 +39,12 @@ p{
 }
 .half-width{
     width: 40%;
-     float: left;
-    margin-left: 70px;
-    margin-right: 50px;
-    padding:1px  5px ;   
+    float: left;
+    margin-left: 2px;
+    padding:2px ;   
+}
+.img_one{
+    margin-left: 80px;
 }
 img{
     height: 350px;
@@ -44,10 +55,9 @@ img{
 #sec{
     background-image: url("img/top-banner.png");
     background-repeat: no-repeat;
-}
-section{
   
 }
+
  .link_up{
     text-decoration: none;
     padding:10px 35px;
@@ -59,24 +69,66 @@ section{
    
 }
 #dream_sec{
-    margin-top: 200px;
+    margin-top: 50px;
+    background-image: url("img/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
+
 #exparience{
     margin-top: 50px;
 }
-.exp1{
-    float: left;
-    width: 40%;
-    margin-top: 10px;
-    margin-left: 70px;
-    padding: 10px;
-    background-color:yellow;
-    height: 350px;
+#exparience_area{ 
+    background-image: url("img/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position:left;
+    margin-bottom: 150px;
+  
 }
-.exp2{
+#fullstack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, #FF906D, #FF7152);
+    border-image-slice: 1;
+    box-shadow: 5px 7px 40px grey;
+   
+    height: 400px;
+    padding: 20px;
     width: 40%;
-    float: right;
-    margin-right: 50px;
-    padding: 10px;
+  
+  
+}
+
+#babydev{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(0 0 255), rgb(0 255 255));
+    border-image-slice: 1;
+    box-shadow: 5px 7px 40px grey;
+    
+    height: 400px;
+   
+    padding: 20px;
+    width: 40%;
+   
+}
+#fotter{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    padding: 5px; 
+    font-size: 20px;
+    color: gray;
+    
+     
+}
+#last_part{
+    margin-top: 100px;
+    height: 200px;
+}
+ section {
+        height: 400px;
+        padding-bottom: 100px;
+  
+}
+.position{
+    text-align-last: center;
 }
 
